# cardsim

./: .dockerignore  Dockerfile  README.md  tmp.json
.github/workflows/: build-container.yaml
engine/: Cargo.toml  Dockerfile  README.md  actions.txt  out.json
engine/src/: constants.rs  main.rs
engine/src/action/: action.rs  card.rs  deck.rs  entity.rs  hand.rs  mod.rs  move_entity.rs  util.rs  { components: {214: Deck { deck_id: 213,
engine/src/command/: actions.rs  command.rs  mod.rs
engine/src/component/: component.rs  mod.rs
engine/src/component/components/: card.rs  dead.rs  deck.rs  hand.rs  mod.rs  position.rs
engine/src/connection_manager/: connection_manager.rs  mod.rs
engine/src/entity/: entity.rs  id.rs  mod.rs  playing_card.rs
engine/src/game_controller/: controller.rs  controller_action.rs  game_controller.rs  mod.rs  requests.rs  responses.rs
engine/src/game_controller/command/: game_command.rs  mod.rs  parse.rs
engine/src/game_controller/command/commands/: entity.rs  mod.rs  playing_card.rs  stack.rs
engine/src/game_objects/: card.rs  game_object.rs  mod.rs
engine/src/game_table/: game_table.rs  mod.rs  update.rs
engine/src/gamestate/: anonymize.rs  gamestate.rs  mod.rs  player.rs
engine/src/table/: table.rs
engine/src/util/: get_position.rs  id.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/game/: Game.tsx
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx
uiv2/: package.json
uiv2/src/: App.css
(+173 files in other folders)
